Remove multibuffer from tests

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "node_modules/mocha/bin/mocha test.js"
   },
   "devDependencies": {
-    "mocha": "*",
-    "multibuffer": "^2.2.1"
+    "mocha": "*"
   },
   "dependencies": {
     "csv-string": "^2.1.1"
